--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
   <link rel="icon" href="favicon.png" type="image/x-icon">
   <script src="js/index.js" type="text/javascript"></script>
+  <script src="js/aos.js" type="text/javascript"></script>
+  <link href="css/aos.css" rel="stylesheet" type="text/css">
 </head>
 <body onload="load();">
   <div class="startup">
@@ -98,7 +100,7 @@
            cy="132.56845"
            r="0.56696427" />
         <path class="path"
-           style="opacity:0.68199978;fill:none;fill-opacity:1;stroke:#adc57b;stroke-width:1;stroke-miterlimit:4;stroke-dasharray:50;stroke-opacity:0.69849249"
+           style="opacity:0.68199978;fill:none;fill-opacity:1;stroke:#C64F30;stroke-width:1;stroke-miterlimit:4;stroke-dasharray:50;stroke-opacity:0.69849249"
            d="m 89.203125,115.81641 c -9.246491,0 -16.753906,7.50546 -16.753906,16.75195 0,9.24649 7.507415,16.75391 16.753906,16.75391 9.246491,0 16.751955,-7.50742 16.751955,-16.75391 0,-9.24649 -7.505464,-16.75195 -16.751955,-16.75195 z m 0,1 c 8.70605,0 15.751955,7.0459 15.751955,15.75195 0,8.70605 -7.045905,15.75391 -15.751955,15.75391 -8.70605,0 -15.753906,-7.04786 -15.753906,-15.75391 0,-8.70605 7.047856,-15.75195 15.753906,-15.75195 z"
            id="path950"
            inkscape:connector-curvature="0" />
@@ -118,7 +120,7 @@
            id="path889"
            inkscape:connector-curvature="0" />
         <path
-           style="opacity:1;fill:white;fill-opacity:1;stroke:grey;stroke-width:2;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+           style="opacity:1;fill:black;fill-opacity:1;stroke:grey;stroke-width:2;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
            d="m 138.33928,150.91221 a 4.7247024,4.7247024 0 0 1 -4.7247,4.7247 4.7247024,4.7247024 0 0 1 -4.7247,-4.7247 4.7247024,4.7247024 0 0 1 4.7247,-4.7247 4.7247024,4.7247024 0 0 1 4.7247,4.7247 z"
            id="path893"
            inkscape:connector-curvature="0" />
@@ -135,6 +137,28 @@
     </div>
   </div>
   <div class="welcome">
+    <div class="content">
+			<nav class="navbar">
+			  <div class="container">
+			    <div class="navbar-header">
+			    	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mynavbar">
+			    		<span class="sr-only">Toggle navigation</span>
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>
+				     </button>
+			      	<a class="navbar-brand"><b>COMNET SOLUTIONS</b></a>
+			    </div>
+			    <div class="collapse navbar-collapse" id="mynavbar">
+				    <ul class="nav navbar-nav navbar-right">
+				      <li><a><b>ABOUT US</b></a></li>
+				      <!--<li><a onclick="loadRegulations();"><b> Regulations</b></a></li>-->
+				      <li><a><b>CONTACT US</b></a></li>
+				    </ul>
+				</div>
+			  </div>
+			</nav>
+    </div>
     <svg
        xmlns:dc="http://purl.org/dc/elements/1.1/"
        xmlns:cc="http://creativecommons.org/ns#"
@@ -210,7 +234,7 @@
              transform="scale(0.26458333)"
              id="path5294"
              d="m 245.55638,639.9185 c 0.001,0 0.003,0 0.004,0 53.56429,0 97.03411,-41.87505 97.03411,-93.47391 0,-51.59906 -43.46982,-93.47411 -97.03411,-93.47411 -0.001,0 -0.003,0 -0.004,0"
-             style="opacity:0.68199978;fill:none;fill-opacity:1;stroke:#ff1554;stroke-width:4.659935;stroke-miterlimit:4;stroke-dasharray:232.99677332;stroke-opacity:0.69849249"
+             style="opacity:0.68199978;fill:none;fill-opacity:1;stroke:#C64F30;stroke-width:4.659935;stroke-miterlimit:4;stroke-dasharray:232.99677332;stroke-opacity:0.69849249"
              inkscape:connector-curvature="0" />
           <path
              id="path5279"
@@ -285,15 +309,15 @@
         <path
            id="path893-5"
            d="m 98.055243,111.31651 a 5.7174159,5.9351806 39.00001 0 1 -5.809837,6.05475 5.7174159,5.9351806 39.00001 0 1 -5.799427,-5.63762 5.7174159,5.9351806 39.00001 0 1 5.809827,-6.05475 5.7174159,5.9351806 39.00001 0 1 5.799437,5.63762 z"
-           style="opacity:1;fill:none;fill-opacity:0.8894472;stroke:#808080;stroke-width:1.29999995;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+           style="opacity:1;fill:none;fill-opacity:0.8894472;stroke:rgb(200,200,200);stroke-width:1.29999995;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
            inkscape:connector-curvature="0" />
         <path
-           style="fill:none;stroke:#808080;stroke-width:1.37508178;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+           style="fill:none;stroke:rgb(200,200,200);stroke-width:1.37508178;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
            d="m 92.475255,173.07864 -0.267269,-56.2183"
            id="path5405"
            inkscape:connector-curvature="0" />
         <path
-           style="fill:none;stroke:#808080;stroke-width:1.29999995;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+           style="fill:none;stroke:rgb(200,200,200);stroke-width:1.29999995;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
            d="m 91.940715,105.62965 c 8.820155,0 17.640055,0 22.049865,4.45423 4.40982,4.45422 4.40982,13.36347 -0.0447,17.81809 -4.45449,4.45463 -13.54139,4.45463 -10.56304,12.37724 2.97835,7.92261 17.9575,23.79337 32.9246,39.65137"
            id="path5407"
            inkscape:connector-curvature="0"
@@ -315,18 +339,21 @@
       Welcome to Data Recovery Centre
     </div>
   </div>
-  <!--<div class="content">
+  <div class="container-fluid content-main">
 			 <div class="row">
-         <div class="container-fluid head">
-           Data Recovery Centre <br /> Comnet Solutions
-         </div>
          <div class="container-fluid text">
            <div class="col-lg-8 col-md-8 col-sm-12 col-sm-12 left">
+             <div class="head-section" data-aos="fade-up-right">
+               <div class="head-section-heading">
+                 ABOUT US
+               </div>
+               Data recovery in Indore means Com-net Solutions, Indore. Com-net solutions recovering data from Microsoft Window 3.1 to all latest version of windows family as well as Linux, Suse,  . We also recover your important and valuable data from Home versions to Server versions. It doesn't matter whether it is FAT or NTFS file system, Logical problem ( windows not booting system ), crashed window, blue screen, missing partition, formatted, virus problem, accidentally deleted or your disk is making any noise or system restarts any time.
+             </div>
            </div>
            <div class="col-lg-4 col-md-4 hidden-sm hidden-xs right">
            </div>
          </div>
        </div>
-  </div>-->
+  </div>
 </body>
 </html>
