Data Recovery Section COmplete

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 			    </div>
 			    <div class="collapse navbar-collapse" id="mynavbar">
 				    <ul class="nav navbar-nav navbar-right">
-				      <li><a><b>ABOUT US</b></a></li>
+				      <li><a href="#about"><b>ABOUT US</b></a></li>
 				      <!--<li><a onclick="loadRegulations();"><b> Regulations</b></a></li>-->
 				      <li><a><b>CONTACT US</b></a></li>
 				    </ul>
@@ -342,15 +342,35 @@
   <div class="container-fluid content-main">
 			 <div class="row">
          <div class="container-fluid text">
-           <div class="col-lg-8 col-md-8 col-sm-12 col-sm-12 left">
+           <div class="col-xs-12 left">
+             <a name="about"></a>
              <div class="head-section" data-aos="fade-up-right">
-               <div class="head-section-heading">
-                 ABOUT US
-               </div>
-               Data recovery in Indore means Com-net Solutions, Indore. Com-net solutions recovering data from Microsoft Window 3.1 to all latest version of windows family as well as Linux, Suse,  . We also recover your important and valuable data from Home versions to Server versions. It doesn't matter whether it is FAT or NTFS file system, Logical problem ( windows not booting system ), crashed window, blue screen, missing partition, formatted, virus problem, accidentally deleted or your disk is making any noise or system restarts any time.
+               <div class="head-section-content">
+                 <div class="head-section-heading">
+                   ABOUT US
+                 </div>
+                 Data recovery in Indore means Com-net Solutions, Indore. Com-net solutions recovering data from Microsoft Window 3.1 to all latest version of windows family as well as Linux, Suse,  . We also recover your important and valuable data from Home versions to Server versions. It doesn't matter whether it is FAT or NTFS file system, Logical problem ( windows not booting system ), crashed window, blue screen, missing partition, formatted, virus problem, accidentally deleted or your disk is making any noise or system restarts any time.
+              </div>
              </div>
-           </div>
-           <div class="col-lg-4 col-md-4 hidden-sm hidden-xs right">
+             <div class="head-section" data-aos="fade-up-left">
+               <div class="head-section-content">
+                 <div class="head-section-heading">
+                   DATA RECOVERY
+                 </div>
+                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                   <ul class="nav nav-pills nav-stacked data" role="tablist">
+                    <li><a onclick='showData("Desktop");'>Desktop Drives</a></li>
+                    <li><a onclick='showData("Laptop");'>Laptop Drives</a></li>
+                    <li><a onclick='showData("Server");'>Server Drives</a></li>
+                    <li><a onclick='showData("PD");'>Pendrives</a></li>
+                    <li><a onclick='showData("Cards");'>Memory Cards</a></li>
+                  </ul>
+                 </div>
+                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8" id="show-data">
+                   Desktop Drives Problems can be logical like knocking, drive no detection, PCB burned, Disk dropped, password Locked, HDD drive making noise or It can be a Physical problems when there is No detection, PCB burned, knocking, Bad Sectos, Wrong Capacity, Noise, Fire Flood affected. We can recover data from desktop drives having any problem.
+                 </div>
+               </div>
+             </div>
            </div>
          </div>
        </div>
