OS and Password Recovery Section Complete

--- a/index.html
+++ b/index.html
@@ -340,40 +340,69 @@
     </div>
   </div>
   <div class="container-fluid content-main">
-			 <div class="row">
-         <div class="container-fluid text">
-           <div class="col-xs-12 left">
-             <a name="about"></a>
-             <div class="head-section" data-aos="fade-up-right">
-               <div class="head-section-content">
-                 <div class="head-section-heading">
-                   ABOUT US
-                 </div>
-                 Data recovery in Indore means Com-net Solutions, Indore. Com-net solutions recovering data from Microsoft Window 3.1 to all latest version of windows family as well as Linux, Suse,  . We also recover your important and valuable data from Home versions to Server versions. It doesn't matter whether it is FAT or NTFS file system, Logical problem ( windows not booting system ), crashed window, blue screen, missing partition, formatted, virus problem, accidentally deleted or your disk is making any noise or system restarts any time.
-              </div>
+     <div class="container-fluid text">
+       <div class="col-xs-12 left">
+         <a name="about"></a>
+         <div class="head-section" data-aos="fade-up-right">
+           <div class="head-section-content">
+             <div class="head-section-heading">
+               ABOUT US
              </div>
-             <div class="head-section" data-aos="fade-up-left">
-               <div class="head-section-content">
-                 <div class="head-section-heading">
-                   DATA RECOVERY
-                 </div>
-                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                   <ul class="nav nav-pills nav-stacked data" role="tablist">
-                    <li><a onclick='showData("Desktop");'>Desktop Drives</a></li>
-                    <li><a onclick='showData("Laptop");'>Laptop Drives</a></li>
-                    <li><a onclick='showData("Server");'>Server Drives</a></li>
-                    <li><a onclick='showData("PD");'>Pendrives</a></li>
-                    <li><a onclick='showData("Cards");'>Memory Cards</a></li>
-                  </ul>
-                 </div>
-                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8" id="show-data">
-                   Desktop Drives Problems can be logical like knocking, drive no detection, PCB burned, Disk dropped, password Locked, HDD drive making noise or It can be a Physical problems when there is No detection, PCB burned, knocking, Bad Sectos, Wrong Capacity, Noise, Fire Flood affected. We can recover data from desktop drives having any problem.
-                 </div>
-               </div>
+             Data recovery in Indore means Com-net Solutions, Indore. Com-net solutions recovering data from Microsoft Window 3.1 to all latest version of windows family as well as Linux, Suse,  . We also recover your important and valuable data from Home versions to Server versions. It doesn't matter whether it is FAT or NTFS file system, Logical problem ( windows not booting system ), crashed window, blue screen, missing partition, formatted, virus problem, accidentally deleted or your disk is making any noise or system restarts any time.
+          </div>
+         </div>
+         <div class="head-section" data-aos="fade-up-left">
+           <div class="head-section-content">
+             <div class="head-section-heading">
+               DATA RECOVERY
+             </div>
+             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+               <ul class="nav nav-pills nav-stacked data" role="tablist">
+                <li><a onclick='showData("Desktop");'>Desktop Drives</a></li>
+                <li><a onclick='showData("Laptop");'>Laptop Drives</a></li>
+                <li><a onclick='showData("Server");'>Server Drives</a></li>
+                <li><a onclick='showData("PD");'>Pendrives</a></li>
+                <li><a onclick='showData("Cards");'>Memory Cards</a></li>
+              </ul>
+             </div>
+             <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8" id="show-data">
+               Desktop Drives Problems can be logical like knocking, drive no detection, PCB burned, Disk dropped, password Locked, HDD drive making noise or It can be a Physical problems when there is No detection, PCB burned, knocking, Bad Sectos, Wrong Capacity, Noise, Fire Flood affected. We can recover data from desktop drives having any problem.
+             </div>
+           </div>
+         </div>
+         <div class="head-section" data-aos="fade-up-right">
+           <div class="head-section-content">
+             <div class="head-section-heading">
+               OPERATING SYSTEM
+             </div>
+             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+               <ul class="nav nav-pills nav-stacked os" role="tablist">
+                <li><a onclick='showOs("Windows");'>Windows</a></li>
+                <li><a onclick='showOs("Linux");'>Linux</a></li>
+              </ul>
+             </div>
+             <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8" id="show-os">
+               Com-net solutions recovering data from Microsoft Window 3.1 to all latest version of windows family. We also recover your important and valuable data from Home versions to Server versions. It doesn't matter whether it is FAT or NTFS file system, Logical problem ( windows not booting system ), crashed window, blue screen, missing partition, formatted, virus problem, accidentally deleted or your disk is making any noise or system restarts any time.
+             </div>
+           </div>
+         </div>
+         <div class="head-section" data-aos="fade-up-left">
+           <div class="head-section-content">
+             <div class="head-section-heading">
+               PASSWORD RECOVERY
+             </div>
+             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+               <ul class="nav nav-pills nav-stacked" role="tablist">
+                <li class="Active"><a>Tally</a></li>
+              </ul>
+             </div>
+             <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8" id="show-pass">
+               Tally is well known name in india, where many small or large scale enterprises uses this accounting software. It is one of the best accounting software available in the market, Its feature are very usefull to safe your account from unauthorized access, but what happend when you lost / forgot the password or your accountant left the job and changed its password. Don't worry Com-net solutions provide the services to remove tally password from all version's of tally.
              </div>
            </div>
          </div>
        </div>
+     </div>
   </div>
 </body>
 </html>
