--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
            id="path889"
            inkscape:connector-curvature="0" />
         <path
-           style="opacity:1;fill:black;fill-opacity:1;stroke:grey;stroke-width:2;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+           style="opacity:1;fill:white;fill-opacity:1;stroke:grey;stroke-width:2;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
            d="m 138.33928,150.91221 a 4.7247024,4.7247024 0 0 1 -4.7247,4.7247 4.7247024,4.7247024 0 0 1 -4.7247,-4.7247 4.7247024,4.7247024 0 0 1 4.7247,-4.7247 4.7247024,4.7247024 0 0 1 4.7247,4.7247 z"
            id="path893"
            inkscape:connector-curvature="0" />
@@ -152,8 +152,7 @@
 			    <div class="collapse navbar-collapse" id="mynavbar">
 				    <ul class="nav navbar-nav navbar-right">
 				      <li><a href="#about"><b>ABOUT US</b></a></li>
-				      <!--<li><a onclick="loadRegulations();"><b> Regulations</b></a></li>-->
-				      <li><a><b>CONTACT US</b></a></li>
+				      <li><a href="#contact"><b>CONTACT US</b></a></li>
 				    </ul>
 				</div>
 			  </div>
@@ -399,6 +398,23 @@
              <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8" id="show-pass">
                Tally is well known name in india, where many small or large scale enterprises uses this accounting software. It is one of the best accounting software available in the market, Its feature are very usefull to safe your account from unauthorized access, but what happend when you lost / forgot the password or your accountant left the job and changed its password. Don't worry Com-net solutions provide the services to remove tally password from all version's of tally.
              </div>
+           </div>
+         </div>
+         <a name="contact"></a>
+         <div class="head-section" data-aos="fade-up-left">
+           <div class="head-section-content">
+             <div class="head-section-heading">
+               CONTACT US
+             </div>
+             You can contact us any time between 10am - 7.00pm Monday to Saturday, You can mail / call / chat with us in case of any data loss.
+             <br />
+             <br />
+             <br />
+             <br />
+             Address : <span class="contact">Shop No:208 2nd Floor, Block-B, Silver Mall, 8A, R.N.T. Marg, Indore - 452009 (Madhya Pradesh)</span><br/>
+             Phone : <span class="contact">(0731)-4047646</span><br/>
+             Mobile : <span class="contact">+91-9981997646</span><br/>
+             E-mail : <span class="contact">Comnetsolutions.indore@gmail.com </br> DataRecoveryCenter.Indore@gmail.com</span><br/>
            </div>
          </div>
        </div>
